@@ -69,6 +69,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Change Dpkg::Compression::FileHandle to inherit directly from IO::File
       instead of FileHandle.
     - Add new Dpkg::PROGTAR variable to store GNU tar command name.
+    - Add new Dpkg::PROGMAKE variable to store GNU make command name.
   * Packaging:
     - Add liblocale-gettext-perl to libdpkg-perl Recommends.
     - Wrap and document dependency relationships.
